--- a/src/app/pages/reportes/clientes/components/ver-folio/ver-folio.component.html
+++ b/src/app/pages/reportes/clientes/components/ver-folio/ver-folio.component.html
@@ -62,11 +62,10 @@
   
   <mat-tab-group mat-stretch-tabs [selectedIndex]="selectedIndex" class="col-md-12" style=" padding: 3px">
   
-    <mat-tab style="min-width: 72px" class="stretch-tab-reserva" label="Reserva">
+    <!-- <mat-tab style="min-width: 72px" class="stretch-tab-reserva" label="Reserva">
       <app-reserva (next)="setStep(2)"></app-reserva>
     </mat-tab>
   
-    <!--HUESPED TAB-->
     <mat-tab label="Huésped">
       <app-huesped></app-huesped>
     </mat-tab>
@@ -77,6 +76,9 @@
   
     <mat-tab label="Edo de Cuenta">
       <app-edo-cuenta></app-edo-cuenta>
+    </mat-tab> -->
+    <mat-tab>
+      
     </mat-tab>
   </mat-tab-group>
   
