--- a/src/app/pages/reportes/customers/components/edit-reserva-modal/components/huesped/huesped-component/huesped-component.component.html
+++ b/src/app/pages/reportes/customers/components/edit-reserva-modal/components/huesped/huesped-component/huesped-component.component.html
@@ -130,7 +130,7 @@ class="form form-label-right"
     <label
       class="h4"
       style="color: aliceblue; text-align: center; padding-top: 5px"
-    >  Otros Detalles </label>
+    >  Datos de Facturación </label>
   </div>
 
 <div class="row container">
