--- a/src/app/pages/reportes/customers/components/edit-reserva-modal/components/huesped/huesped-component/huesped-component.component.html
+++ b/src/app/pages/reportes/customers/components/edit-reserva-modal/components/huesped/huesped-component/huesped-component.component.html
@@ -12,7 +12,7 @@ class="form form-label-right"
     <button [disabled]="!id_Socio" class="btn btn-secondary" [disabled]="id_Socio" (click)="getNumeroSocio()">GENERAR ID SOCIO</button>
     &nbsp;&nbsp;&nbsp;&nbsp;
     <label style="font-weight: bold;font-size: medium; "> &nbsp; ID Socio : </label>
-    <label style="font-size: medium;" >&nbsp;{{id_Socio}}</label>
+    &nbsp;&nbsp;<label style="font-size: medium; font-weight: bold;" >&nbsp;{{huesped.ID_Socio}}</label>
 
     
   </div>
