--- a/src/app/pages/reportes/clientes/components/ver-folio/components/vista-cliente/vista-cliente.component.html
+++ b/src/app/pages/reportes/clientes/components/ver-folio/components/vista-cliente/vista-cliente.component.html
@@ -1,1 +1,326 @@
-<p>vista-cliente works!</p>
+
+<div class="cursor-default modal-content">
+    <div class="row container">
+        <div class="col-lg-6">
+            <label style="font-weight: bold;font-size: medium; "> &nbsp; ID Socio : </label>
+            <label style="font-size: medium;" >&nbsp; {{historicoService.getCurrentClienteValue.id_Socio}}</label>
+        </div>
+        <div class="col-lg-6">
+            <mat-radio-button checked class="example-margin">{{historicoService.getCurrentClienteValue.tipoHuesped}}</mat-radio-button >
+        </div>
+    </div>
+               
+  
+<br>
+<div class="row container">
+  <div class="col-lg-12">
+    <label class="form-label">Nombre Completo</label>
+    <input
+      type="text"
+      disabled
+      class="form-control form-control-lg form-control-solid"
+      name="nombre"
+      autocomplete="off"
+      value="{{ historicoService.getCurrentClienteValue.nombre }}"
+    />
+  </div>
+</div>
+<br>
+<div class="row container">
+  <div class="col-lg-6">
+    <label class="form-label">Email</label>
+    <input
+      type="email"
+      disabled
+      class="form-control form-control-lg form-control-solid"
+      name="email"
+      autocomplete="off"
+      value="{{historicoService.getCurrentClienteValue.email}}"
+    />
+
+  </div>
+
+  <div class="col-lg-6">
+    <label class="form-label">Teléfono</label>
+    <input
+      type="tel"
+      disabled
+      class="form-control form-control-lg form-control-solid"
+      name="telefono"
+      autocomplete="off"
+      value="{{ historicoService.getCurrentClienteValue.telefono }}"
+    />
+    <br />
+    
+  </div>
+</div>
+</div>
+<div style="background-color: #319dd7" class="modal-content">
+
+  <label
+    class="h4"
+    style="color: aliceblue; text-align: center; padding-top: 5px"
+  >  Otros Detalles </label>
+</div>
+
+<div class="row container">
+<div class="col-lg-6">
+    <div class="form-group">
+      <label class="form-label">Fecha de Nacimiento</label>
+      <div class="input-group">
+        <input placement='bottom-left' 
+        disabled
+        class="form-control form-control-lg form-control-solid" placeholder="yyyy-mm-dd"
+        name="dp"   
+        value="{{historicoService.getCurrentClienteValue.fechaNacimiento}}">
+      </div>
+    </div>
+ 
+
+</div>
+<div class="col-lg-6">
+  <br />
+  <label class="form-label">Trabaja En:</label>
+  <input
+  disabled
+    class="form-control form-control-lg form-control-solid"
+    name="trabajaEn"
+    autocomplete="off"
+    value="{{ historicoService.getCurrentClienteValue.trabajaEn }}"
+  />
+  <br />
+  
+</div>
+</div>
+<div class="row container">
+<div class="col-lg-6">
+  <br />
+  <label class="form-label">Tipo de ID</label>
+  <input
+  disabled
+    class="form-control form-control-lg form-control-solid"
+    name="tipoDeID"
+    autocomplete="off"
+    value="{{ historicoService.getCurrentClienteValue.tipoDeID }}"
+  />
+  <br />
+ 
+</div>
+<div class="col-lg-6">
+  <br />
+  <label class="form-label">Numero de ID</label>
+  <input
+  disabled
+    class="form-control form-control-lg form-control-solid"
+    name="numeroDeID"
+    autocomplete="off"
+    value="{{ historicoService.getCurrentClienteValue.numeroDeID }}"
+  />
+  <br />
+  
+</div>
+</div>
+<div class="row container">
+<div class="col-lg-12">
+  <label class="form-label">Dirección</label>
+  <input
+    disabled
+    type="text"
+    class="form-control form-control-lg form-control-solid"
+    name="direccion"
+    autocomplete="off"
+    value="{{ historicoService.getCurrentClienteValue.direccion }}"
+  />
+  
+</div>
+</div>
+<div class="row container">
+<div class="col-lg-6">
+  <br />
+  <label class="form-label">País</label>
+  <input
+    disabled
+    class="form-control form-control-lg form-control-solid"
+    name="pais"
+    autocomplete="off"
+    value="{{ historicoService.getCurrentClienteValue.pais }}"
+  />
+  <br />
+
+</div>
+<div class="col-lg-6">
+  <br />
+  <label class="form-label">Ciudad</label>
+  <input
+  disabled
+    class="form-control form-control-lg form-control-solid"
+    name="ciudad"
+    autocomplete="off"
+    value="{{ historicoService.getCurrentClienteValue.ciudad }}"
+  />
+  <br />
+</div>
+</div>
+<div class="row container">
+<div class="col-lg-6">
+  <br />
+  <label class="form-label">Codigo Postal</label>
+  <input
+  disabled
+  class="form-control form-control-lg form-control-solid"
+    name="codigoPostal"
+    autocomplete="off"
+    value="{{ historicoService.getCurrentClienteValue.codigoPostal }}"
+  />
+  <br />
+
+</div>
+<div class="col-lg-6">
+  <br />
+  <label class="form-label">Lenguaje</label>
+  <input
+  disabled
+  class="form-control form-control-lg form-control-solid"
+    name="lenguaje"
+    autocomplete="off"
+    value="{{ historicoService.getCurrentClienteValue.lenguaje }}"
+  />
+  <br />
+</div>
+</div>
+
+<div style="background-color: #319dd7" class="modal-content">
+
+<label
+  class="h4"
+  style="color: aliceblue; text-align: center; padding-top: 5px"
+>  Datos Para Facturar </label>
+</div>
+
+<br>
+<div class="row container">
+  <div class="col-lg-12">
+    <label class="form-label">Nombre / Razon Social</label>
+    <input
+    disabled
+      type="text"
+      class="form-control form-control-lg form-control-solid"
+      name="razonsocial"
+      autocomplete="off"
+    />
+   
+  </div>
+  <br>
+  <div class="col-lg-12">
+    <label class="form-label">RFC</label>
+    <input
+    disabled
+      type="text"
+      class="form-control form-control-lg form-control-solid"
+      name="rfc"
+      autocomplete="off"
+    />
+    
+  </div>
+</div>
+<br>
+<div class="row container">
+  <div class="col-lg-6">
+    <label class="form-label">EMAIL</label>
+    <input
+    disabled
+      type="text"
+      class="form-control form-control-lg form-control-solid"
+      name="email"
+      autocomplete="off"
+    />
+  </div>
+<div class="col-lg-6">
+  <label class="form-label">USO DE CFDI</label>
+  <mat-form-field appearance="fill">
+    <mat-label></mat-label>
+    <mat-select value="Gastos en General">
+        <mat-option>Gastos en General</mat-option>
+    </mat-select>
+    <!-- <mat-select  >
+      <mat-option *ngFor="let cfdi of cfdiList" [value]="cfdi">{{cfdi}}</mat-option>
+    </mat-select> -->
+  </mat-form-field>
+</div>
+</div>
+
+<br>
+
+
+
+<div style="background-color: #319dd7" class="modal-content">
+
+<label
+  class="h4"
+  style="color: aliceblue; text-align: center; padding-top: 5px"
+> Notas Internas del historicoService.getCurrentClienteValue </label>
+</div>
+<br>
+<div class="row">
+  <div style="text-align: center;" class="col-md-12">
+    <textarea disabled style="border: 2px solid rgb(177, 177, 177)" class="form-control">           - NOTAS EXTRAS DEL CLIENTE</textarea>
+  </div>
+</div>
+<br>
+
+<br>
+<div style="background-color: #319dd7" class="modal-content">
+  <label
+    class="h4"
+    style="color: aliceblue; text-align: center; padding-top: 5px"
+  > Historial de Visitas </label>
+
+
+</div>
+
+  
+  <div class="mat-elevation-z8">
+    <table mat-table [dataSource]="dataSource" matSort>
+
+
+      <!-- Folio Column -->
+      <ng-container matColumnDef="folio">
+        <th mat-header-cell hidden *matHeaderCellDef mat-sort-header> Folio </th>
+        <td mat-cell hidden *matCellDef="let row"> {{row.Color}} </td>
+      </ng-container>
+
+      <!-- Fecha Column -->
+      <ng-container matColumnDef="creada">
+        <th mat-header-cell hidden *matHeaderCellDef mat-sort-header> Fecha </th>
+        <td mat-cell hidden *matCellDef="let row"> {{row._id}} </td>
+      </ng-container>
+
+      <!-- Noches Column -->
+      <ng-container matColumnDef="noches">
+        <th mat-header-cell hidden *matHeaderCellDef mat-sort-header> Noches </th>
+        <td mat-cell hidden *matCellDef="let row"> {{row.ColorAplicado}} </td>
+      </ng-container> 
+
+      <!-- Total Column -->
+      <ng-container matColumnDef="tarifa">
+        <th mat-header-cell hidden *matHeaderCellDef mat-sort-header> Tarifa </th>
+        <td mat-cell hidden *matCellDef="let row"> {{row.ColorAplicado}} </td>
+      </ng-container> 
+
+  
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  
+      <!-- Row shown when there is no matching data. -->
+      <tr class="mat-row" *matNoDataRow>
+        <td class="mat-cell" colspan="4">No se encontraron datos</td>
+      </tr>
+
+    </table>
+  
+    <!-- <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Pagina"></mat-paginator> -->
+  </div>
+<br>
+
+
+
