--- a/src/app/pages/reportes/customers/customers.component.html
+++ b/src/app/pages/reportes/customers/customers.component.html
@@ -93,12 +93,12 @@
           </th> -->
           <th>
             # de Reserva
-            <app-sort-icon column="id" [activeColumn]="sorting.column" [activeDirection]="sorting.direction"
+            <app-sort-icon column="folio" [activeColumn]="sorting.column" [activeDirection]="sorting.direction"
               (sort)="sort($event)"></app-sort-icon>
           </th>
           <th>
             Nombre
-            <app-sort-icon column="firstName" [activeColumn]="sorting.column" [activeDirection]="sorting.direction"
+            <app-sort-icon column="nombre" [activeColumn]="sorting.column" [activeDirection]="sorting.direction"
               (sort)="sort($event)"></app-sort-icon>
           </th>
           <th style="text-align: center;">
@@ -108,12 +108,12 @@
           </th>
           <th style="text-align: center;">
             Limpieza
-            <app-sort-icon column="estatus" [activeColumn]="sorting.column" [activeDirection]="sorting.direction"
+            <app-sort-icon column="estatus_Ama_De_Llaves" [activeColumn]="sorting.column" [activeDirection]="sorting.direction"
               (sort)="sort($event)"></app-sort-icon>
           </th>
           <th>
             Habitación
-            <app-sort-icon column="type" [activeColumn]="sorting.column" [activeDirection]="sorting.direction"
+            <app-sort-icon column="habitacion" [activeColumn]="sorting.column" [activeDirection]="sorting.direction"
               (sort)="sort($event)"></app-sort-icon>
           </th>
           <th>
@@ -143,7 +143,7 @@
           </th> -->
           <th>
             Pago Pendiente
-            <app-sort-icon column="pago pendiente" [activeColumn]="sorting.column" [activeDirection]="sorting.direction"
+            <app-sort-icon column="pendiente" [activeColumn]="sorting.column" [activeDirection]="sorting.direction"
               (sort)="sort($event)"></app-sort-icon>
           </th>
           <th style="display:none;">
