--- a/src/app/pages/reportes/customers/components/edit-reserva-modal/components/transacciones/transacciones-component/transacciones-component.component.html
+++ b/src/app/pages/reportes/customers/components/edit-reserva-modal/components/transacciones/transacciones-component/transacciones-component.component.html
@@ -236,7 +236,7 @@
       </div>
       <div class="col-sm-2">
         <button type="button" (click)="maxCantidad()" class="btn btn-danger">
-          [MAX]
+          [Pendiente]
         </button>
       </div>
       
