--- a/src/app/pages/reportes/customers/components/bloqueo-customer-modal/bloqueo-reserva-modal.component.html
+++ b/src/app/pages/reportes/customers/components/bloqueo-customer-modal/bloqueo-reserva-modal.component.html
@@ -62,11 +62,13 @@
        <small> <label #contentPlaceholder  style="color: #fa6d7c; font-weight:bold">La fecha inicial no puede ser mayor que la fecha final seleccione otro rango de fechas para el bloqueo</label></small>
    </div>
 
+<form>
 
     <div class="row">
       <label style="color:#00506a; font-weight: bold;" class="form-label">Tipo de Habitación </label>
       <div class="col-lg-12">
-        <mat-select [formControl]="tipoCuarto"
+        <mat-select 
+                    formControlName="tipoCuarto"
                     class="form-control form-control-lg form-control-solid"
                     name="habitacion"
                     (selectionChange)="habValue($event)"
@@ -87,34 +89,39 @@
     <div class="row">
       <label style="color:#00506a; font-weight: bold;" class="form-label">Numero de Habitacion </label>
       <div class="col-lg-12">
-          <mat-select #matSelect
-                      class="form-control form-control-lg form-control-solid"
-                      [formControl]="numeroHab"
-                      multiple
-                      placeholder="-- {{placeHolder}} -- ">
-            <footer>
-              <button style="background-color: #319dd7;" (click)="okayChecked()" mat-raised-button class="btn btn-blocked">Confirmar</button>
-            </footer>
-            <!-- <mat-option (click)="Allchecked($event)">Todos</mat-option> -->
-              <div>
-                <mat-option #matOption (click)="cuartoValue(matOption.selected,matOption.value);" *ngFor="let numero of mySet" [value]="numero">{{numero}}</mat-option>
-              </div>
+          <mat-select 
+          #itemSelect
+          class="form-control form-control-lg form-control-solid"
+          multiple
+          formControlName="numeroHab"
+          placeholder="-- {{placeHolder}} -- ">
+          <footer class="col-sm-12">
+            <button mat-raised-button class="col-sm-4 btn btn-primary">Confirmar</button>
+            <button (click)="selectedAll(true);" style="background-color: #319dd7;"  mat-raised-button class="col-sm-4 btn btn-success">Todas</button>
+            <button (click)="selectedAll(false);" style="background-color: #319dd7;"  mat-raised-button class="col-sm-4 btn btn-danger">Ninguna</button>
+          </footer>
+
+          <!-- <mat-option (click)="Allchecked($event)">Todos</mat-option> -->
+            <div>
+              <mat-option #matOption (click)="cuartoValue(matOption.selected,matOption.value);" *ngFor="let numero of disponiblesIndexados" [value]="numero.selected">{{numero.value}}</mat-option>
+            </div>
           </mat-select>
+         
                       <!--Error Block-->
         <mat-error *ngIf="numeroHab.hasError('required') && inicio==false">
           <strong>*Campo Obligatorio</strong>
         </mat-error>
         <br>
-        <mat-error *ngIf="mySet.size==0 && inicio==false && habitacion.value!=1">
+        <mat-error *ngIf="disponiblesIndexados.length==0 && inicio==false && habitacion.value!=1">
           <strong>*Los Cuartos de {{habitacion.value}} se encuentran ocupados seleccione otro tipo de habitacion</strong>
         </mat-error>
         <br>
-        <mat-error *ngIf="mySet.size==0 && inicio==false && habitacion.value==1">
+        <mat-error *ngIf="disponiblesIndexados.length==0 && inicio==false && habitacion.value==1">
           <strong>*Todas las habitaciones se encuentran ocupadas para esta fecha, seleccione otro rango de fechas</strong>
         </mat-error>
       </div>
     </div>
-
+</form>
     <br>
     <div class="row">
       <label style="color:#00506a; font-weight: bold;" class="form-label">Restricciones:</label>
