--- a/src/app/pages/reportes/customers/components/nueva-reserva-modal/nueva-reserva-modal.component.html
+++ b/src/app/pages/reportes/customers/components/nueva-reserva-modal/nueva-reserva-modal.component.html
@@ -292,9 +292,60 @@
       </div>
      </div>
 
-    <div class="cursor-default overlay overlay-block modal-body" style="background-color: #dadcdf">
-      <div class="form-group">
-        <div class="row">
+       <button (click)="(hiddenCliente==true) ? hiddenCliente=false : hiddenCliente=true" class="btn btn-primary col-md-12">Buscar Cliente</button>
+
+    <div class="cursor-default  modal-body" style="background-color: #dadcdf">
+      <div [hidden]="hiddenCliente" class="form-group">
+        <mat-form-field appearance="standard">
+          <label class="form-label" for="form1">&nbsp;&nbsp; &nbsp;Buscar Cliente</label>
+          <input               class="form-control form-control-lg form-control-solid"          matInput (keyup)="applyFilter($event)" placeholder="" #input>
+        </mat-form-field>
+        
+        <div class="table-responsive mat-elevation-z8">
+          <table mat-table [dataSource]="dataSource" matSort>
+        
+            <!-- ID Column -->
+            <ng-container matColumnDef="id_Socio">
+              <th mat-header-cell *matHeaderCellDef mat-sort-header> ID Socio</th>
+              <td mat-cell *matCellDef="let row"> {{row.id_Socio}} </td>
+            </ng-container>
+        
+            <!-- Progress Column -->
+            <ng-container matColumnDef="nombre">
+              <th mat-header-cell *matHeaderCellDef mat-sort-header> Nombre </th>
+              <td mat-cell *matCellDef="let row"> {{row.nombre}} </td>
+            </ng-container>
+        
+            <!-- Name Column -->
+            <ng-container matColumnDef="email">
+              <th mat-header-cell *matHeaderCellDef mat-sort-header> Email </th>
+              <td mat-cell *matCellDef="let row"> {{row.email}} </td>
+            </ng-container>
+
+             <!-- Telefono Column -->
+             <ng-container matColumnDef="telefono">
+              <th mat-header-cell *matHeaderCellDef mat-sort-header> Telèfono </th>
+              <td mat-cell *matCellDef="let row"> {{row.telefono}} </td>
+            </ng-container>
+        
+            <!-- Fruit Column -->
+            <!-- <ng-container matColumnDef="telefono">
+              <th mat-header-cell *matHeaderCellDef mat-sort-header> Telèfono </th>
+              <td mat-cell *matCellDef="let row"> {{row.telefono}} </td>
+            </ng-container> -->
+        
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="onSelectHuesped(row)"></tr>
+        
+            <!-- Row shown when there is no matching data. -->
+            <tr class="mat-row" *matNoDataRow>
+              <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
+            </tr>
+          </table>
+        
+<!--           <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of users"></mat-paginator>
+ -->        </div>
+        <!-- <div class="row">
           <label class="form-label" for="form1">&nbsp;&nbsp; &nbsp;Buscar Cliente</label>
           <div  class="text-center input-group col-lg-12">
               <input  #filterName
@@ -308,9 +359,7 @@
                       value="{{searchValue}}"
                       oninput="this.value = this.value.toLowerCase()"
                       />
-            <!-- <button type="button" (click)="toggleSearch()" class="btn btn-primary">
-              <i class="fas fa-search"></i>
-            </button> -->
+
           </div>
         </div>
         <div  [style]="displayNone" class="name-container-dropdown">
@@ -320,8 +369,7 @@
               {{huesped.nombre}}
             </mat-list-option>
           </mat-selection-list>
-          <!-- <span id='close'   .selected[0]?.value     onclick='this.parentNode.parentNode.parentNode.removeChild(this.parentNode.parentNode); return false;'>x</span> -->
-        </div>
+        </div> -->
       </div>
 
 
@@ -415,14 +463,14 @@
             placeholder="Teléfono"
             autocomplete="off"
             formControlName="telefono"
-            value="{{huesped.telefono}}"/>
-           <!--[class.is-invalid]="isControlInvalid('telefono')"/>-->
-          <!--[class.is-invalid]="isControlInvalid('telefono')"
-            [class.is-valid]="isControlValid('telefono')"-->
+            value="{{huesped.telefono}}"
+            [class.is-invalid]="isControlInvalid('telefono')"
+            [class.is-invalid]="isControlInvalid('telefono')"
+            [class.is-valid]="isControlValid('telefono')"/>
           <!-- <div class="invalid-feedback" *ngIf="isControlValid('telefono')">
             Teléfono Invalido
           </div> -->
-          <!-- <div class="valid-feedback" *ngIf="isControlValid('telefono')">
+         <div class="valid-feedback" *ngIf="isControlValid('telefono')">
             Teléfono Escrito Correctamente
           </div>
           <div
@@ -442,7 +490,7 @@
           *ngIf="controlHasError('pattern', 'telefono')"
           >
            Solo se permiten números
-        </div> -->
+        </div>
         </div>
 
       </div>
